tests/invalid/wrong_covariance.stderr
error[E0308]: mismatched types
  --> $DIR/wrong_covariance.rs:13:1
   |
13 | / self_cell!(
14 | |     struct NoCov {
15 | |         #[from]
16 | |         owner: String,
...  |
20 | |     }
21 | | );
   | |__^ lifetime mismatch
   |
   = note: expected struct `NotCovariant<'y>`
              found struct `NotCovariant<'x>`
note: the lifetime `'y` as defined on the function body at 286:43...
  --> $DIR/wrong_covariance.rs:13:1
   |
13 | / self_cell!(
14 | |     struct NoCov {
15 | |         #[from]
16 | |         owner: String,
...  |
20 | |     }
21 | | );
   | |__^
note: ...does not necessarily outlive the lifetime `'x` as defined on the function body at 286:35
  --> $DIR/wrong_covariance.rs:13:1
   |
13 | / self_cell!(
14 | |     struct NoCov {
15 | |         #[from]
16 | |         owner: String,
...  |
20 | |     }
21 | | );
   | |__^
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
